-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.0 , Qt Creator 4.7.0, Qt Creator 4.8.0-beta1
-
None
-
Windows 10
Android SDK v28
Android NDK 15c
Trying to start debugger on Windows for an Android project using a QtCreator (which is already using the "new" debug mechanism => QtCreator 4.6 onwards) i receive the message:
Can not find/copy C++ debug server.
Investigating this issue further lead me to the method AndroidRunnerWorker::uploadFile() (in src\plugins\android\androidrunnerworker.cpp).
It specifically fails on the execution of the command
adb shell run-as my.package.name sh -c 'cat > gdbserver'
Debugging the call further showed the result message:
adb.exe did not respond within the timeout limit (30 s).
This happened to me on different machines and different projects and QtCreator versions (4.6+).
When running the mentioned command manually it expects the file contents of gdserver binary. Since the content comes from a QByteArray, maybe just an EOF is missing?
| For Gerrit Dashboard: QTCREATORBUG-21317 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 246755,4 | Android: Fix debugging using old devices | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 246764,3 | Android: Fix uploading file to device | 4.8 | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |
| 247153,3 | Android: Fix uploading file to device on windows hosts | 4.8 | qt-creator/qt-creator | Status: DEFERRED | -1 | 0 |
| 248776,7 | Android: Fix gdbserver upload for Windows when using Armv8 arch | 4.8 | qt-creator/qt-creator | Status: MERGED | -2 | 0 |